--- a/functions/index.html
+++ b/functions/index.html
@@ -4,10 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DISCHI JSON</title>
+    <title>Document</title>
 </head>
 
 <body>
+    <header></header>
 
 </body>
 
