--- a/index.html
+++ b/index.html
@@ -5,27 +5,48 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dischi</title>
+    <!-- FONT AWESOME -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+        integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 
+    <!-- BOOTSTRAP -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="./css/style.css">
+    <!-- CSS -->
+    <link rel="stylesheet" href="css/style.css">
 
-
+    <!-- VUE -->
     <script defer src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
 
+    <!-- AXIOS -->
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.7.7/axios.min.js"
         integrity="sha512-DdX/YwF5e41Ok+AI81HI8f5/5UsoxCVT9GKYZRIzpLxb8Twz4ZwPPX+jQMwMhNQ9b5+zDEefc+dcvQoPWGNZ3g=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
+    <!-- JS -->
     <script defer src="./js/script.js"></script>
 </head>
 
 <body>
+    <header>
+        <div class="container nav-spotify mb-5 d-flex align-items-center">
+            <i class="fa-brands fa-spotify icon-spotify"></i>
+        </div>
+    </header>
     <main id="app" class="container">
-        <div>
-            <div v-for="(singleMusic, index) in music" :key="index">
-                <p>sss{{singleMusic.title}}</p>
+        <div class="d-flex justify-content-center row gap-4">
+            <div class="p-5 col-3 rounded rounded-3 d-flex flex-column music-card" v-for="(singleMusic, index) in music"
+                :key="index">
+                <img :src="singleMusic.poster" alt="poster">
+                <div class=" d-flex flex-column align-items-center mt-1">
+                    <h5 class=" text-center">
+                        <p>{{singleMusic.title}}</p>
+                    </h5>
+                    <p>{{singleMusic.author}}</p>
+                    <p>{{singleMusic.year}}</p>
+                </div>
             </div>
         </div>
     </main>
